--- a/resource/params.properties
+++ b/resource/params.properties
@@ -3,6 +3,8 @@ WINDOW_BASE=D:/sunjinchao/data/eclipse/WorkSpace/Space3/eyou
 #WINDOW_BASE=D:/sunjinchao/soft/Tomcat/apache-tomcat-7.0.67/wtpwebapps/eyou
 #WINDOW_BASE=D:/apache-tomcat-7.0.67/wtpwebapps/eyou
 #WINDOW_BASE=D:/sunjinchao/data/eclipse/WorkSpace/Space3/eyou
+WINDOW_TOMCAT_BASE=D:/sunjinchao/soft/Tomcat/apache-tomcat-7.0.67/wtpwebapps/eyou
+
 #LINUX_BASE=D:/opt/tomcat-7.0/webapps/51Cruise
 LINUX_BASE=/opt/tomcat-7.0/webapps/51Cruise
 #LINUX_BASE=/opt/tomcath2/wtpwebapps/51Cruise
